tests/iter/iter.exp
Error ----------------------------------------------------------------------------------------------------- iter.js:7:15

Cannot iterate using a `for...in` statement because array literal [1] is not an object, null, or undefined.
[invalid-in-rhs]

   iter.js:7:15
   7| for (var k in a) {
                    ^

References:
   iter.js:1:9
   1| var a = [true,false];
              ^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ iter.js:8:9

Cannot get `a[k]` because string [1] is not an array index. [incompatible-use]

   iter.js:8:9
   8|     foo(a[k]); // k is a string, which shouldn't be used for array access
              ^^^^

References:
   iter.js:7:10
   7| for (var k in a) {
               ^ [1]


Error ---------------------------------------------------------------------------------------------------- iter.js:22:20

Cannot iterate using a `for...in` statement because array literal [1] is not an object, null, or undefined.
[invalid-in-rhs]

   iter.js:22:20
   22| for (var n in (d = a)) {
                          ^

References:
   iter.js:1:9
    1| var a = [true,false];
               ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- iter.js:23:9

Cannot get `d[n]` because string [1] is not an array index. [incompatible-use]

   iter.js:23:9
   23|     foo(d[n]); // d is a string, which shouldn't be used for array access
               ^^^^

References:
   iter.js:22:10
   22| for (var n in (d = a)) {
                ^ [1]



Found 4 errors
